# rsa

./: .gitignore  CNAME  README.md  index.html
assets/: index-B63WTT9a.js  index-BD46Y8pJ.js  index-CVC7R7jy.js  index-DaV3pJ1s.js  index-Dn6r3piY.js  index-DxcjohJC.js  index-JWjgkL_5.css  index-pX0XRwAK.js
backend/: .dockerignore  .vercelignore  Dockerfile  app.py  calculations.py  fly.toml  input_validation.py  menu_options.py  primes.py  pyproject.toml  requirements.txt  run_app.py
backend/app/: __init__.py  calculations.py  exceptions.py  routes.py
backend/app/calculations/: RSA_calculations.py  RSA_helpers.py  calculate.py  utils.py
backend/app/tests/: test_RSA_calculations.py  test_RSA_helpers.py  test_calculate.py  test_utils.py
backend/calculations/: RSA_calculations.py  calculate.py  utils.py
backend/old/: RSA_calculations.py  main.py  menu_helpers.py  menu_options.py  print_only.py
backend/tests/: test_RSA_calculations.py  test_RSA_helpers.py  test_app.py  test_endpoint.py  test_middleware.py  test_utils.py
frontend/: index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts  index.css  types.ts
frontend/src/components/: Decode.tsx  Encode.tsx  EnterPrivateKey.tsx  EnterPublicKey.tsx  GenerateKeys.tsx  GeneratePrimes.tsx  Header.tsx  MyComponent.tsx  ReadMessage.tsx  ReceiveMessage.tsx  WriteMessage.tsx
frontend/src/components/ReadMode/: Decode.test.tsx  (+5 more)
frontend/src/hooks/: useBackendCalculation.test.ts  useBackendCalculation.ts
(+12 files in other folders)
